WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134222
WK1 WebFrameNetworkingContext cleanup: do not instantiate an empty NSString to create an empty WTF::String
https://bugs.webkit.org/show_bug.cgi?id=134222
Summary
WK1 WebFrameNetworkingContext cleanup: do not instantiate an empty NSString t...
Benjamin Poulain
Reported
2014-06-23 15:54:37 PDT
WK1 WebFrameNetworkingContext cleanup: do not instanciate an empty NSString to create an empty WTF::String
Attachments
Patch
(1.68 KB, patch)
2014-06-23 15:54 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-06-23 15:54:47 PDT
Created
attachment 233642
[details]
Patch
Andreas Kling
Comment 2
2014-06-23 15:59:58 PDT
Comment on
attachment 233642
[details]
Patch k
Benjamin Poulain
Comment 3
2014-06-24 17:13:26 PDT
Comment on
attachment 233642
[details]
Patch Clearing flags on attachment: 233642 Committed
r170407
: <
http://trac.webkit.org/changeset/170407
>
Benjamin Poulain
Comment 4
2014-06-24 17:13:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug