WK1 WebFrameNetworkingContext cleanup: do not instanciate an empty NSString to create an empty WTF::String https://bugs.webkit.org/show_bug.cgi?id=134222

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-06-24
Reviewed by Andreas Kling.

* WebCoreSupport/WebFrameNetworkingContext.mm:
(WebFrameNetworkingContext::sourceApplicationIdentifier):


Canonical link: https://commits.webkit.org/152257@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170407 268f45cc-cd09-0410-ab3c-d52691b4dbfc